_v2/parser/src/snapshots/parser__quirks__quirk_1_2_one_of_without_discriminator.snap
---
source: parser/src/quirks.rs
assertion_line: 55
expression: datatype
---
{
  "Object": {
    "properties": {
      "common": {
        "String": {}
      },
      "onlyA": {
        "Optional": {
          "data_type": {
            "Integer": {}
          }
        }
      },
      "onlyB": {
        "Optional": {
          "data_type": {
            "Boolean": {}
          }
        }
      }
    }
  }
}
