_v2/parser/src/snapshots/parser__quirks__quirk_1_3_type_object_next_to_one_of.snap
---
source: parser/src/quirks.rs
assertion_line: 63
expression: datatype
---
{
  "OneOf": {
    "discriminator_field": "cloudProvider",
    "options": {
      "aws": {
        "Object": {
          "properties": {
            "awsAccountId": {
              "Optional": {
                "data_type": {
                  "String": {}
                }
              }
            }
          }
        }
      },
      "azure": {
        "Object": {
          "properties": {
            "tenantId": {
              "Optional": {
                "data_type": {
                  "String": {}
                }
              }
            }
          }
        }
      }
    }
  }
}
