_v2/parser/src/snapshots/parser__quirks__quirk_1_5_children_redeclare_discriminator_property.snap
---
source: parser/src/quirks.rs
assertion_line: 79
expression: datatype
---
{
  "OneOf": {
    "discriminator_field": "type",
    "options": {
      "TRANSITION_DATA": {
        "Object": {
          "properties": {
            "criteria": {
              "String": {}
            }
          }
        }
      }
    }
  }
}
