_v2/parser/src/snapshots/parser__quirks__quirk_1_7_mapping_targets_that_are_not_children.snap
---
source: parser/src/quirks.rs
assertion_line: 95
expression: datatype
---
{
  "OneOf": {
    "discriminator_field": "cloudProvider",
    "options": {
      "aws": {
        "Object": {
          "properties": {
            "awsAccountId": {
              "Optional": {
                "data_type": {
                  "String": {}
                }
              }
            }
          }
        }
      },
      "gcp": {
        "Object": {
          "properties": {
            "projectNumber": {
              "Optional": {
                "data_type": {
                  "String": {}
                }
              }
            }
          }
        }
      }
    }
  }
}
