_v2/parser/src/snapshots/parser__quirks__quirk_2_2_single_value_enum.snap
---
source: parser/src/quirks.rs
assertion_line: 125
expression: datatype
---
{
  "Object": {
    "properties": {
      "mode": {
        "Enum": [
          "AVERAGE"
        ]
      }
    }
  }
}
