_v2/parser/src/snapshots/parser__quirks__quirk_2_3_unions_of_inline_enums.snap
---
source: parser/src/quirks.rs
assertion_line: 133
expression: datatype
---
{
  "Enum": [
    "US_EAST_1",
    "US_WEST_1",
    "eastus",
    "westus"
  ]
}
